commit: 优化项目获取图片URL完整路径的方法